test/Fail/Issue3937.agda
-- Andreas, 2019-07-23, issue #3937 reported by gallais

f : let ... = ? in ?
f = ?

-- WAS: internal error

-- Expected: Could not parse the left-hand side ...
