test/Fail/Issue3937.err
Issue3937.agda:3,9-12: error: [OperatorInformation]
Could not parse the left-hand side ...
Operators used in the grammar:
  None
when scope checking let ... = ? in ?
